# risc_zero_banking

./: .gitignore  .gitmodules  readme.md
foundry/: .gitignore
foundry/contracts/: ImageID.sol  Lending.sol
foundry/merkle_foundry/: .gitignore
foundry/merkle_foundry/apps/: Cargo.toml
foundry/merkle_foundry/methods/src/: lib.rs
foundry/methods/guest/: Cargo.toml
foundry/script/: Deploy.s.sol
foundry/tests/: Elf.sol
lib/: .gitignore  Cargo.toml
lib/core/eth_utils/: Cargo.toml  anvil_signatures_risc_zero_banking.json
lib/core/eth_utils/src/: lib.rs  main.rs
lib/core/eth_utils/tests/: eth_utils_test.rs
lib/core/fetch_merkle/: Cargo.toml  user_history_proof_e7f1…051.json
lib/core/fetch_merkle/src/: lib.rs
lib/core/fetch_merkle/tests/: fetch_merkle_proofs_test.rs
lib/core/merkle_verifier_core/: Cargo.toml  user_history_proof_e7f1…051.json
lib/core/merkle_verifier_core/src/: fetch_merkle_proofs.rs  lib.rs  merkle_patricia.rs
lib/core/merkle_verifier_core/tests/: fetch_merkle_proofs_test.rs  patricia_test.rs
lib/core/score_calculation/: Cargo.toml
lib/core/score_calculation/src/: lib.rs
lib/core/score_calculation/tests/: score_calculation_tests.rs
lib/core/stark_to_snark/: Cargo.toml
lib/core/stark_to_snark/src/: main.rs
lib/core/tlsn-verifier-core/: Cargo.toml
lib/core/tlsn-verifier-core/src/: lib.rs  types.rs  verification.rs
lib/core/tlsn-verifier-core/tests/: verificaiton_test.rs
lib/integration-test/: Cargo.toml
lib/integration-test/src/: main.rs
lib/integration-test/tests/: tlsn_integration_tests.rs
lib/proofs/example_merkle_verify/: Cargo.toml
lib/proofs/merkle_verify/: Cargo.toml
lib/proofs/merkle_verify/src/: guest.rs  host.rs
lib/test_data/eth_utils/: anvil_accounts.json  anvil_signatures_risc_zero_banking.json
lib/test_data/merkel_receipt/: receipt.json
lib/test_data/tlsn/: valid_presentation.json
lib/test_data/user_history_merkle_proof/: user_history_proof_e7f1…051.json
risc0_proofs/account_merkel_proof/: Cargo.toml  README.md  copy.sh  receipt.json
risc0_proofs/account_merkel_proof/host/: Cargo.toml
risc0_proofs/account_merkel_proof/host/src/: main.rs
risc0_proofs/account_merkel_proof/methods/guest/: Cargo.toml
risc0_proofs/account_merkel_proof/methods/guest/src/: main.rs
risc0_proofs/account_merkel_proof/methods/src/: lib.rs  tests.rs
risc0_proofs/tlsn_verifier/data/: input.json
