[workspace]
members = [
"integration-test",
    "core/tlsn-verifier-core",
    "core/stark_to_snark",
    "core/eth_utils",
     "core/merkle_verifier_core",
     "core/score_calculation",
     "proofs/example_merkle_verify",
    # "tlsn-risc0",
    # "tlsn-risc0/methods",
    # "tlsn-test-suite",
]
