[package]
name = "tlsn-tester"
version = "0.1.0"
edition = "2021"

[dependencies]
tlsn-verifier-core = { path = "../core/tlsn-verifier-core", features = ["use-tlsn"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tlsn-verifier = { git = "https://github.com/tlsnotary/tlsn", optional = true }
