[package]
name = "apps"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
alloy = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.0", features = ["derive", "env"] }
env_logger = { version = "0.10" }
log = { workspace = true }
methods = { workspace = true }
risc0-ethereum-contracts = { workspace = true }
# risc0-zkvm = { workspace = true, default-features = true }
url = { workspace = true }

risc0-zkvm = { version = "2.0.2",features=["prove"]}
bincode = "1.3"
serde_json="1.0"
risc0-groth16 = { version = "1.0", features = ["prove"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Ethereum interactions
ethers = { version = "2.0", features = ["ws", "rustls"] }
ethereum-types = "0.14"

# Utilities
hex = "0.4"
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }

# Optional for parsing .env files with API keys
dotenv = "0.15"
risc0-build = "2.1.1"
