[package]
name = "eth_utils"
version = "0.1.0"
edition = "2024"

[lib]
name = "eth_utils"
path = "src/lib.rs"


[dependencies]
# Ethereum interactions
merkle_verifier_core ={ path="../merkle_verifier_core/"}
ethers = { version = "2.0", features = ["ws", "rustls"] }
ethereum-types = "0.14"
anyhow = "1.0"
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-test = "0.4"
