[package]
name = "fetch_merkle"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
merkle_verifier_core ={ path="../merkle_verifier_core/"}
tokio = { version = "1.28", features = ["full"] }
serde_json = "1.0"
ethers = { version = "2.0"}
chrono = { version = "0.4", features = ["serde"] }
sha3 = { version = "0.10", default-features = false }
ethereum-types = { version = "0.14", default-features = false, features = ["serialize", "rlp"] }
rlp = { version = "0.5", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
