[package]
name = "merkle_verifier_core"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/lib.rs"

[dependencies]
# RISC Zero guest SDK

# Core dependencies (compatible with no_std)
sha3 = { version = "0.10", default-features = false }
ethereum-types = { version = "0.14", default-features = false, features = ["serialize", "rlp"] }
rlp = { version = "0.5", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

