[package]
name = "tlsn-verifier-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Only include dependencies that work in both RISC Zero and standard environments
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
# Optional dependencies for TLS Notary if available for both environments

tlsn-verifier = { git = "https://github.com/tlsnotary/tlsn", optional = true }
[features]
# Feature to use the actual TLSNotary crates
use-tlsn = ["dep:tlsn-verifier"]
# Feature for minimal implementation without external TLSNotary dependencies
minimal = []
