[package]
name = "example_merkle_verify"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]

merkle_verifier_core = { path = "../../core/merkle_verifier_core",default-features = false }
sha3 = { version = "0.10", default-features = false }
ethereum-types = { version = "0.14", default-features = false, features = ["serialize", "rlp"] }
rlp = { version = "0.5", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

