[package]
name = "merkle_verify"
version = "0.1.0"
edition = "2024"


[lib]
path = "src/lib.rs"

[dependencies]
anyhow = {version = "1.0"}
tokio = { version = "1.28", features = ["full"] }
ethers = { version = "2.0", features = ["ws", "rustls"] }
fetch_merkle = { path = "../../core/fetch_merkle/",default-features = false }
merkle_verifier_core = { path = "../../core/merkle_verifier_core/",default-features = false }
eth_utils = { path = "../../core/eth_utils"}
score_calculation = { path = "../../core/score_calculation/"}
sha3 = { version = "0.10", default-features = false }
ethereum-types = { version = "0.14", default-features = false, features = ["serialize", "rlp"] }
rlp = { version = "0.5", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

